--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "better-dev/account-api-client",
     "description": "API for clients authentication",
     "type": "library",
+    "license": "MIT",
     "authors": [
         {
             "name": "Marcelo Zani",
