--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "marcelozani@hotmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
             "guzzlehttp/guzzle": "^6.2",
             "nesbot/carbon": "~1.21.0",
