--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,11 @@
     "autoload": {
         "psr-0": {
             "AccountApiClient": "src"
+        },
+        "psr-4": {
+            "BetterDev\\AccountApiClient\\": "src"
         }
-    }
+    },
     "require": {
         "php": ">=5.5.9",
         "guzzlehttp/guzzle": "^6.2",
