--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
     ],
     "autoload": {
         "psr-0": {
-            "AccountApiClient": "src"
+            "AccountApiSDK": "src"
         },
         "psr-4": {
-            "BetterDev\\AccountApiClient\\": "src"
+            "BetterDev\\AccountApiSDK\\": "src"
         }
     },
     "require": {
