--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,6 @@
     "require": {
         "php": ">=5.5.9",
         "guzzlehttp/guzzle": "^6.2",
-        "nesbot/carbon": "~1.21.0",
-        "illuminate/config": "^5.2",
-        "illuminate/session": "^5.2"
+        "nesbot/carbon": "~1.21.0"
     }
 }
