removendo illuminate session, usando aura

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
         "php": ">=5.5.9",
         "guzzlehttp/guzzle": "^6.2",
         "nesbot/carbon": "~1.21.0",
-        "illuminate/session": "^5.2"
+        "aura/session": "^2.0"
     }
 }
